--- a/src/group3/griddie/viewOLD/menu/main/MainMenuView.fxml
+++ b/src/group3/griddie/viewOLD/menu/main/MainMenuView.fxml
@@ -2,24 +2,25 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.162-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group3.griddie.controllerOLD.menu.MainMenuController">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group3.griddie.controllerOLD.menu.MainMenuController">
    <top>
-      <Label text="Griddie Game Framework" BorderPane.alignment="CENTER">
+      <Label text="Griddie" BorderPane.alignment="CENTER">
          <font>
             <Font size="38.0" />
          </font>
       </Label>
    </top>
    <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <Pane BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="216.0" layoutY="99.0" mnemonicParsing="false" onAction="#startOthello" prefHeight="56.0" prefWidth="168.0" style="-fx-border-radius: 100;" text="Othello" />
-            <Button layoutX="216.0" layoutY="197.0" mnemonicParsing="false" onAction="#startTicTacToe" prefHeight="56.0" prefWidth="168.0" text="TicTacToe" />
+            <Button layoutX="216.0" layoutY="72.0" mnemonicParsing="false" onAction="#startOthello" prefHeight="44.0" prefWidth="168.0" style="-fx-border-radius: 100;" text="Othello" />
+            <Button layoutX="216.0" layoutY="150.0" mnemonicParsing="false" onAction="#startTicTacToe" prefHeight="46.0" prefWidth="168.0" text="TicTacToe" />
+            <Button layoutX="242.0" layoutY="229.0" mnemonicParsing="false" onAction="#closeGriddie" prefHeight="34.0" prefWidth="116.0" text="quit" />
          </children>
-      </AnchorPane>
+      </Pane>
    </center>
 </BorderPane>
