--- a/src/assets/css/custom-font-style.css
+++ b/src/assets/css/custom-font-style.css
@@ -12,6 +12,11 @@
     -fx-font-family: "Fipps";
     -fx-font-size: 20;
 }
+
+.text-button-game-right{
+    -fx-font-family: "Fipps";
+    -fx-font-size: 15;
+}
 .title{
     -fx-font-family: "Fipps";
     -fx-font-size: 70;
